fix scrollbar

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -1,4 +1,7 @@
 @import url(fonts.css)
 
+html
+    overflow hidden
+
 body
     font-family 'roboto'
